<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbg">

    <TextView
        android:id="@+id/txt_smarttitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="27sp"
        android:textColor="@color/white"
        android:layout_marginTop="70dip"/>

    <LinearLayout
        android:id="@+id/linearlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dip">



        <EditText
            android:id="@+id/edit_user"
            android:layout_width="320dip"
            android:layout_height="wrap_content"
            android:hint="@string/text_username"
            android:layout_gravity="center"
            android:gravity="left"
            android:textColor="@color/white"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textColorHint="@color/opacitywhite"
            android:backgroundTint="@color/opacitywhite" />


        <EditText
            android:id="@+id/edit_password"
            android:layout_width="320dip"
            android:layout_height="wrap_content"
            android:hint="@string/text_pass"
            android:layout_gravity="center"
            android:gravity="left"
            android:inputType="textPassword"
            android:layout_marginTop="20dip"
            android:textColor="@color/white"
            android:textColorHint="@color/opacitywhite"
            android:textCursorDrawable="@drawable/cursor_color"
            android:backgroundTint="@color/opacitywhite"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="320dip"
            android:layout_height="40dip"
            android:layout_gravity="center"
            android:layout_marginTop="20dip"
            android:background="@drawable/rounded_btn_login"
            android:hint="@string/btn_login"
            android:textColorHint="@color/white"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/txt_helplogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_help_login"
            android:textAlignment="center"
            android:textColor="@color/opawhite"
            android:layout_marginTop="10dip"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/image_or"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/or"
            android:layout_gravity="center"
            android:layout_marginTop="10dip"/>

        <Button
            android:id="@+id/login_touch"
            android:layout_width="320dip"
            android:layout_height="40dip"
            android:hint="@string/txt_logintouch"
            android:layout_gravity="center"
            android:background="@drawable/rounded_btn_touch"
            android:textColorHint="@color/black"
            android:textSize="16sp"
            android:layout_marginTop="30dip" />

        <ImageView
            android:id="@+id/txt_brand_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dip"
            android:src="@drawable/sutherlandlogowhite"/>

    </LinearLayout>

</LinearLayout>

